[package]
name = "solutions"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace = true }

[build-dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["clock"]}
ureq = { version = "*" }

[[bin]]
name = "template"
path = "src/template.rs"

[[bin]]
name = "2022_01"
path = "src/p2022_01.rs"

[[bin]]
name = "2022_02"
path = "src/p2022_02.rs"

[[bin]]
name = "2022_03"
path = "src/p2022_03.rs"

[[bin]]
name = "2022_04"
path = "src/p2022_04.rs"

[[bin]]
name = "2022_05"
path = "src/p2022_05.rs"

[[bin]]
name = "2022_06"
path = "src/p2022_06.rs"

[[bin]]
name = "2022_07"
path = "src/p2022_07.rs"

[[bin]]
name = "2022_08"
path = "src/p2022_08.rs"

[[bin]]
name = "2022_09"
path = "src/p2022_09.rs"

[[bin]]
name = "2022_10"
path = "src/p2022_10.rs"

[[bin]]
name = "2022_11"
path = "src/p2022_11.rs"

[[bin]]
name = "2022_12"
path = "src/p2022_12.rs"
