[package]
name = "solutions"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace = true }
serde = { version="*", optional=true }
serde_json = { version="*", optional=true }

[build-dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["clock"]}
ureq = { version = "*" }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
all = ["serde"]

[[bin]]
name = "template"
path = "src/template.rs"

# 2022

[[bin]]
name = "2022_01"
path = "src/p2022_01.rs"

[[bin]]
name = "2022_02"
path = "src/p2022_02.rs"

[[bin]]
name = "2022_03"
path = "src/p2022_03.rs"

[[bin]]
name = "2022_04"
path = "src/p2022_04.rs"

[[bin]]
name = "2022_05"
path = "src/p2022_05.rs"

[[bin]]
name = "2022_06"
path = "src/p2022_06.rs"

[[bin]]
name = "2022_07"
path = "src/p2022_07.rs"

[[bin]]
name = "2022_08"
path = "src/p2022_08.rs"

[[bin]]
name = "2022_09"
path = "src/p2022_09.rs"

[[bin]]
name = "2022_10"
path = "src/p2022_10.rs"

[[bin]]
name = "2022_11"
path = "src/p2022_11.rs"

[[bin]]
name = "2022_12"
path = "src/p2022_12.rs"

[[bin]]
name = "2022_13"
path = "src/p2022_13.rs"
required-features = ["serde"]

[[bin]]
name = "2022_14"
path = "src/p2022_14.rs"

[[bin]]
name = "2022_15"
path = "src/p2022_15.rs"

[[bin]]
name = "2022_16"
path = "src/p2022_16.rs"

[[bin]]
name = "2022_17"
path = "src/p2022_17.rs"

[[bin]]
name = "2022_18"
path = "src/p2022_18.rs"

[[bin]]
name = "2022_19"
path = "src/p2022_19.rs"

[[bin]]
name = "2022_20"
path = "src/p2022_20.rs"

# 2023

[[bin]]
name = "2023_01"
path = "src/p2023_01.rs"

[[bin]]
name = "2023_02"
path = "src/p2023_02.rs"

[[bin]]
name = "2023_03"
path = "src/p2023_03.rs"

[[bin]]
name = "2023_04"
path = "src/p2023_04.rs"

[[bin]]
name = "2023_05"
path = "src/p2023_05.rs"

[[bin]]
name = "2023_06"
path = "src/p2023_06.rs"

[[bin]]
name = "2023_08"
path = "src/p2023_08.rs"

[[bin]]
name = "2023_09"
path = "src/p2023_09.rs"

[[bin]]
name = "2023_10"
path = "src/p2023_10.rs"

[[bin]]
name = "2023_11"
path = "src/p2023_11.rs"

# 2024

[[bin]]
name = "2024_01"
path = "src/p2024_01.rs"

[[bin]]
name = "2024_02"
path = "src/p2024_02.rs"
